// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default render 1`] = `
<div
  className="header"
>
  <a
    href="https://testing.captainfact.io/videos/xxxx"
    rel="noopener noreferrer"
    target="_BLANK"
    title="Translated<OpenDiscussion>"
  >
    <h1
      className="title"
    >
      CaptainFact 
      <img
        alt=""
        src="test-file-stub"
      />
    </h1>
  </a>
</div>
`;

exports[`new tab image can be override 1`] = `
<div
  className="header"
>
  <a
    href="https://testing.captainfact.io/videos/xxxx"
    rel="noopener noreferrer"
    target="_BLANK"
    title="Translated<OpenDiscussion>"
  >
    <h1
      className="title"
    >
      CaptainFact 
      <img
        alt=""
        src="overrided-pic.jpg"
      />
    </h1>
  </a>
</div>
`;

exports[`show toggle if given a close function 1`] = `
<div
  className="header"
>
  <a
    href="https://testing.captainfact.io/videos/xxxx"
    rel="noopener noreferrer"
    target="_BLANK"
    title="Translated<OpenDiscussion>"
  >
    <h1
      className="title"
    >
      CaptainFact 
      <img
        alt=""
        src="test-file-stub"
      />
    </h1>
  </a>
  <button
    className="closeBtn"
    onClick={[Function]}
    title="Translated<closeSidebar>"
    type="button"
  >
    <img
      alt="X"
      src="test-file-stub"
    />
  </button>
</div>
`;

exports[`with empty url params 1`] = `
<div
  className="header"
>
  <a
    href="https://testing.captainfact.io/videos/xxxx"
    rel="noopener noreferrer"
    target="_BLANK"
    title="Translated<OpenDiscussion>"
  >
    <h1
      className="title"
    >
      CaptainFact 
      <img
        alt=""
        src="test-file-stub"
      />
    </h1>
  </a>
</div>
`;

exports[`with statement in url params 1`] = `
<div
  className="header"
>
  <a
    href="https://testing.captainfact.io/videos/xxxx?statement=61"
    rel="noopener noreferrer"
    target="_BLANK"
    title="Translated<OpenDiscussion>"
  >
    <h1
      className="title"
    >
      CaptainFact 
      <img
        alt=""
        src="test-file-stub"
      />
    </h1>
  </a>
</div>
`;
